--- a/app/auth/login.html
+++ b/app/auth/login.html
@@ -13,7 +13,7 @@
 <div class="col-md-2"></div>
 <div class="col-md-8">
   <!--Error message display-->
-  {% for messege in get_flashed_messages()%}
+  {% for message in get_flashed_messages()%}
   <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&timesb;</button>
     {{message}}
